--- a/weatherTestForLesson/weatherTestForLesson/Base.lproj/Main.storyboard
+++ b/weatherTestForLesson/weatherTestForLesson/Base.lproj/Main.storyboard
@@ -16,22 +16,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="nRT-yq-Gkl">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28 ºC" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hl-Oe-g1Z">
                                 <rect key="frame" x="20" y="144" width="374" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moscow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tbd-Be-LeO">
                                 <rect key="frame" x="20" y="212" width="374" height="32.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rainy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RmE-07-baD">
                                 <rect key="frame" x="20" y="289" width="374" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -40,6 +43,7 @@
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tbd-Be-LeO" secondAttribute="trailing" constant="20" id="4ge-8F-cWU"/>
                             <constraint firstItem="7hl-Oe-g1Z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="IKw-vu-WgS"/>
+                            <constraint firstItem="nRT-yq-Gkl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KFo-qa-M9F"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7hl-Oe-g1Z" secondAttribute="trailing" constant="20" id="NLa-KZ-fpa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RmE-07-baD" secondAttribute="trailing" constant="20" id="O99-oh-9Ze"/>
                             <constraint firstItem="7hl-Oe-g1Z" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="TK5-RB-JRw"/>
@@ -47,7 +51,10 @@
                             <constraint firstItem="Tbd-Be-LeO" firstAttribute="top" secondItem="7hl-Oe-g1Z" secondAttribute="bottom" constant="41.5" id="caw-vh-Y0T"/>
                             <constraint firstItem="RmE-07-baD" firstAttribute="top" secondItem="Tbd-Be-LeO" secondAttribute="bottom" constant="44.5" id="dtO-He-Wpy"/>
                             <constraint firstItem="Tbd-Be-LeO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hQt-b4-Ntt"/>
+                            <constraint firstItem="nRT-yq-Gkl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lpv-pq-5WT"/>
+                            <constraint firstItem="nRT-yq-Gkl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mXg-t8-SqJ"/>
                             <constraint firstItem="RmE-07-baD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="riK-cC-mSa"/>
+                            <constraint firstAttribute="bottom" secondItem="nRT-yq-Gkl" secondAttribute="bottom" id="u3o-6w-bNp"/>
                         </constraints>
                     </view>
                     <connections>
@@ -58,10 +65,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="48"/>
+            <point key="canvasLocation" x="28.985507246376812" y="47.544642857142854"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Background" width="173" height="375"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
